assets/css/style.css
.captionSize {
    font-size: 24px;
}

.brand {
    background-color: rgb(115, 13, 199);
    margin-top: 10px;
    margin-bottom: 10px;
}

.aboutTextColor {
    color: rgb(115, 13, 199);
}

.marginBottomCont {
    margin-bottom: 150px;
}

.marginBottomCol {
    margin-bottom: 20px;
}

body {
    background-image: url("../images/background.jpg");
    background-repeat: repeat;
    background-attachment: scroll;
}

.padding {
    padding-right: 20px;
  }

.containerMarginLeft {
    margin-left: 100px;
}

.containerPositionLeft {
    margin-left: 18rem;
    position: fixed:
}
.outerDiv {
    position:relative;
}

.aAbsolute {
    position:absolute;top: auto;right: auto; z-index: 1000;
}

.johnPic {
    max-width: 100%;
    height: auto;
    max-height: 260px;
}

.porfolioPic {
    max-width: 100%;
    height: auto;
    max-height: 260px;
}

.myFooter {
        padding: 5px 0;
        margin: 0;
}

@media screen and (max-width: 768px) {
    #styling {
        background-color: green;
        margin-left: 100px;
    }
}

@media screen and (max-width: 992px) {
    #styling {
        background-color: yellow;
        margin-left: 200px;
    }
}

@media screen and (max-width: 576px) {
    #styling {
        background-color: blue;
        margin-left: 50px;
    }
}

@media screen and (max-width: 1200px) {
    #styling {
        background-color: orange;
        margin-left: 300px;
    }
}

